Fixed issue #CR-956: wrong colorcode for g-700 grey

--- a/themes/admin/Sea_Green/css/sea_green-rtl.css
+++ b/themes/admin/Sea_Green/css/sea_green-rtl.css
@@ -11094,7 +11094,7 @@ a {
   font-weight: 500;
   font-size: 1rem;
   line-height: 20px;
-  color: #5E6372;
+  color: #6E748C;
 }
 
 .ls-settings-wrapper {
@@ -18207,10 +18207,10 @@ input[type=number] {
   font-size: 14px;
 }
 #sidebar .subpanel .wrapper .title {
-  color: #5E6372;
+  color: #6E748C;
 }
 #sidebar .subpanel .wrapper .icon {
-  color: #5E6372;
+  color: #6E748C;
 }
 #sidebar .subpanel.level-0 .menu-selected {
   background: linear-gradient(to left, #40ab46 0px, #40ab46 6px, #fff 6px, #fff 100%);
